--- a/.gitmodules
+++ b/.gitmodules
@@ -1,210 +1,256 @@
 [submodule "snippets"]
-	path = snippets
-	url = git://github.com/asux/snipmate-snippets.git
+  path = snippets
+  url = git://github.com/asux/snipmate-snippets.git
   ignore = dirty
 [submodule "bundle/rails"]
-	path = bundle/rails
-	url = git://github.com/tpope/vim-rails.git
+  path = bundle/rails
+  url = git://github.com/tpope/vim-rails.git
   ignore = dirty
 [submodule "bundle/cucumber"]
-	path = bundle/cucumber
-	url = git://github.com/tpope/vim-cucumber.git
+  path = bundle/cucumber
+  url = git://github.com/tpope/vim-cucumber.git
   ignore = dirty
 [submodule "bundle/haml"]
-	path = bundle/haml
-	url = git://github.com/tpope/vim-haml.git
+  path = bundle/haml
+  url = git://github.com/tpope/vim-haml.git
   ignore = dirty
 [submodule "bundle/surround"]
-	path = bundle/surround
-	url = git://github.com/tpope/vim-surround.git
+  path = bundle/surround
+  url = git://github.com/tpope/vim-surround.git
   ignore = dirty
 [submodule "bundle/NERD_tree"]
-	path = bundle/NERD_tree
-	url = git://github.com/scrooloose/nerdtree.git
+  path = bundle/NERD_tree
+  url = git://github.com/scrooloose/nerdtree.git
   ignore = dirty
 [submodule "bundle/NERD_commenter"]
-	path = bundle/NERD_commenter
-	url = git://github.com/scrooloose/nerdcommenter.git
+  path = bundle/NERD_commenter
+  url = git://github.com/scrooloose/nerdcommenter.git
   ignore = dirty
 [submodule "bundle/ragtag"]
-	path = bundle/ragtag
-	url = git://github.com/tpope/vim-ragtag.git
+  path = bundle/ragtag
+  url = git://github.com/tpope/vim-ragtag.git
   ignore = dirty
 [submodule "bundle/fugitive"]
-	path = bundle/fugitive
-	url = git://github.com/tpope/vim-fugitive.git
+  path = bundle/fugitive
+  url = git://github.com/tpope/vim-fugitive.git
   ignore = dirty
 [submodule "bundle/markdown"]
-	path = bundle/markdown
-	url = git://github.com/tpope/vim-markdown.git
+  path = bundle/markdown
+  url = git://github.com/tpope/vim-markdown.git
   ignore = dirty
 [submodule "bundle/vividchalk"]
-	path = bundle/vividchalk
-	url = git://github.com/tpope/vim-vividchalk.git
+  path = bundle/vividchalk
+  url = git://github.com/tpope/vim-vividchalk.git
   ignore = dirty
 [submodule "bundle/git"]
-	path = bundle/git
-	url = git://github.com/tpope/vim-git.git
+  path = bundle/git
+  url = git://github.com/tpope/vim-git.git
   ignore = dirty
 [submodule "bundle/endwise"]
-	path = bundle/endwise
-	url = git://github.com/tpope/vim-endwise.git
+  path = bundle/endwise
+  url = git://github.com/tpope/vim-endwise.git
   ignore = dirty
 [submodule "bundle/snipmate"]
-	path = bundle/snipmate
-	url = git://github.com/akitaonrails/snipmate.vim.git
+  path = bundle/snipmate
+  url = git://github.com/akitaonrails/snipmate.vim.git
   ignore = dirty
 [submodule "bundle/syntastic"]
-	path = bundle/syntastic
-	url = git://github.com/scrooloose/syntastic.git
+  path = bundle/syntastic
+  url = git://github.com/scrooloose/syntastic.git
   ignore = dirty
 [submodule "bundle/textile"]
-	path = bundle/textile
-	url = git://github.com/timcharper/textile.vim.git
+  path = bundle/textile
+  url = git://github.com/timcharper/textile.vim.git
   ignore = dirty
 [submodule "bundle/vim-ruby"]
-	path = bundle/vim-ruby
-	url = git://github.com/vim-ruby/vim-ruby.git
+  path = bundle/vim-ruby
+  url = git://github.com/vim-ruby/vim-ruby.git
   ignore = dirty
 [submodule "bundle/unimpaired"]
-	path = bundle/unimpaired
-	url = git://github.com/tpope/vim-unimpaired.git
+  path = bundle/unimpaired
+  url = git://github.com/tpope/vim-unimpaired.git
   ignore = dirty
 [submodule "bundle/scss-syntax"]
-	path = bundle/scss-syntax
-	url = http://github.com/cakebaker/scss-syntax.vim.git
+  path = bundle/scss-syntax
+  url = http://github.com/cakebaker/scss-syntax.vim.git
   ignore = dirty
 [submodule "bundle/ack"]
-	path = bundle/ack
-	url = git://github.com/mileszs/ack.vim.git
+  path = bundle/ack
+  url = git://github.com/mileszs/ack.vim.git
   ignore = dirty
 [submodule "bundle/vim-coffee-script"]
-	path = bundle/vim-coffee-script
-	url = git://github.com/kchmck/vim-coffee-script.git
+  path = bundle/vim-coffee-script
+  url = git://github.com/kchmck/vim-coffee-script.git
   ignore = dirty
 [submodule "bundle/supertab"]
-	path = bundle/supertab
-	url = git://github.com/ervandew/supertab.git
+  path = bundle/supertab
+  url = git://github.com/ervandew/supertab.git
   ignore = dirty
 [submodule "bundle/vim-ruby-sinatra"]
-	path = bundle/vim-ruby-sinatra
-	url = git://github.com/hallison/vim-ruby-sinatra.git
+  path = bundle/vim-ruby-sinatra
+  url = git://github.com/hallison/vim-ruby-sinatra.git
   ignore = dirty
 [submodule "bundle/securemodelines"]
-	path = bundle/securemodelines
-	url = git://github.com/ciaranm/securemodelines.git
+  path = bundle/securemodelines
+  url = git://github.com/ciaranm/securemodelines.git
   ignore = dirty
 [submodule "bundle/vim-textobj-user"]
-	path = bundle/vim-textobj-user
-	url = git://github.com/kana/vim-textobj-user.git
+  path = bundle/vim-textobj-user
+  url = git://github.com/kana/vim-textobj-user.git
+  ignore = dirty
 [submodule "bundle/vim-textobj-rubybloc"]
-	path = bundle/vim-textobj-rubybloc
-	url = git://github.com/nelstrom/vim-textobj-rubyblock.git
+  path = bundle/vim-textobj-rubybloc
+  url = git://github.com/nelstrom/vim-textobj-rubyblock.git
+  ignore = dirty
 [submodule "bundle/vim-preview"]
-	path = bundle/vim-preview
-	url = git://github.com/greyblake/vim-preview.git
+  path = bundle/vim-preview
+  url = git://github.com/greyblake/vim-preview.git
+  ignore = dirty
 [submodule "bundle/abolish"]
-	path = bundle/abolish
-	url = git://github.com/tpope/vim-abolish.git
+  path = bundle/abolish
+  url = git://github.com/tpope/vim-abolish.git
+  ignore = dirty
 [submodule "bundle/liftweb"]
-	path = bundle/liftweb
-	url = git://github.com/Shadowfiend/liftweb-vim.git
+  path = bundle/liftweb
+  url = git://github.com/Shadowfiend/liftweb-vim.git
+  ignore = dirty
 [submodule "bundle/scala"]
-	path = bundle/scala
-	url = git://github.com/akhil/scala-vim-bundle.git
+  path = bundle/scala
+  url = git://github.com/akhil/scala-vim-bundle.git
+  ignore = dirty
 [submodule "bundle/grails-vim"]
-	path = bundle/grails-vim
-	url = git://github.com/felipero/grails-vim.git
+  path = bundle/grails-vim
+  url = git://github.com/felipero/grails-vim.git
+  ignore = dirty
 [submodule "bundle/clojure"]
-	path = bundle/clojure
-	url = git://github.com/vim-scripts/VimClojure.git
+  path = bundle/clojure
+  url = git://github.com/vim-scripts/VimClojure.git
+  ignore = dirty
 [submodule "bundle/zencoding-vim"]
-	path = bundle/zencoding-vim
-	url = git://github.com/mattn/zencoding-vim.git
+  path = bundle/zencoding-vim
+  url = git://github.com/mattn/zencoding-vim.git
+  ignore = dirty
 [submodule "bundle/vim-colors-solarized"]
-	path = bundle/vim-colors-solarized
-	url = git://github.com/altercation/vim-colors-solarized.git
+  path = bundle/vim-colors-solarized
+  url = git://github.com/altercation/vim-colors-solarized.git
+  ignore = dirty
 [submodule "bundle/jade"]
-	path = bundle/jade
-	url = git://github.com/digitaltoad/vim-jade.git
+  path = bundle/jade
+  url = git://github.com/digitaltoad/vim-jade.git
+  ignore = dirty
 [submodule "bundle/vim-jquery"]
-	path = bundle/vim-jquery
-	url = git://github.com/itspriddle/vim-jquery.git
+  path = bundle/vim-jquery
+  url = git://github.com/itspriddle/vim-jquery.git
+  ignore = dirty
 [submodule "bundle/html5.vim"]
-	path = bundle/html5.vim
-	url = git://github.com/othree/html5.vim.git
+  path = bundle/html5.vim
+  url = git://github.com/othree/html5.vim.git
+  ignore = dirty
 [submodule "bundle/gundo"]
-	path = bundle/gundo
-	url = http://github.com/sjl/gundo.vim.git
+  path = bundle/gundo
+  url = http://github.com/sjl/gundo.vim.git
+  ignore = dirty
 [submodule "plugin/gist-vim"]
-	path = plugin/gist-vim
-	url = http://github.com/mattn/gist-vim.git
+  path = plugin/gist-vim
+  url = http://github.com/mattn/gist-vim.git
+  ignore = dirty
 [submodule "bundle/vim-yankring"]
-	path = bundle/vim-yankring
-	url = git://github.com/chrismetcalf/vim-yankring.git
+  path = bundle/vim-yankring
+  url = git://github.com/chrismetcalf/vim-yankring.git
+  ignore = dirty
 [submodule "bundle/vim-bundler"]
-	path = bundle/vim-bundler
-	url = git://github.com/tpope/vim-bundler.git
+  path = bundle/vim-bundler
+  url = git://github.com/tpope/vim-bundler.git
+  ignore = dirty
 [submodule "bundle/vim-rvm"]
-	path = bundle/vim-rvm
-	url = git://github.com/tpope/vim-rvm.git
+  path = bundle/vim-rvm
+  url = git://github.com/tpope/vim-rvm.git
+  ignore = dirty
 [submodule "bundle/actionscript"]
-	path = bundle/actionscript
-	url = git://github.com/endel/actionscript.vim.git
+  path = bundle/actionscript
+  url = git://github.com/endel/actionscript.vim.git
+  ignore = dirty
 [submodule "bundle/vim-capybara"]
-	path = bundle/vim-capybara
-	url = git://github.com/asux/vim-capybara.git
+  path = bundle/vim-capybara
+  url = git://github.com/asux/vim-capybara.git
+  ignore = dirty
 [submodule "bundle/vim-autoclose"]
-	path = bundle/vim-autoclose
-	url = git://github.com/Townk/vim-autoclose.git
+  path = bundle/vim-autoclose
+  url = git://github.com/Townk/vim-autoclose.git
+  ignore = dirty
 [submodule "bundle/vim-golang"]
-	path = bundle/vim-golang
-	url = git://github.com/jnwhiteh/vim-golang.git
+  path = bundle/vim-golang
+  url = git://github.com/jnwhiteh/vim-golang.git
+  ignore = dirty
 [submodule "bundle/gist-vim"]
-	path = bundle/gist-vim
-	url = git://github.com/mattn/gist-vim.git
+  path = bundle/gist-vim
+  url = git://github.com/mattn/gist-vim.git
+  ignore = dirty
 [submodule "bundle/git-vim"]
-	path = bundle/git-vim
-	url = git://github.com/motemen/git-vim.git
+  path = bundle/git-vim
+  url = git://github.com/motemen/git-vim.git
+  ignore = dirty
 [submodule "bundle/grep-vim"]
-	path = bundle/grep-vim
-	url = git://github.com/vim-scripts/grep.vim.git
+  path = bundle/grep-vim
+  url = git://github.com/vim-scripts/grep.vim.git
+  ignore = dirty
 [submodule "bundle/vim-indexed-search"]
-	path = bundle/vim-indexed-search
-	url = git://github.com/henrik/vim-indexed-search.git
+  path = bundle/vim-indexed-search
+  url = git://github.com/henrik/vim-indexed-search.git
+  ignore = dirty
 [submodule "bundle/ctrp"]
-	path = bundle/ctrp
-	url = git://github.com/kien/ctrlp.vim.git
+  path = bundle/ctrp
+  url = git://github.com/kien/ctrlp.vim.git
+  ignore = dirty
 [submodule "bundle/vim-easymotion"]
-	path = bundle/vim-easymotion
-	url = git://github.com/Lokaltog/vim-easymotion.git
+  path = bundle/vim-easymotion
+  url = git://github.com/Lokaltog/vim-easymotion.git
+  ignore = dirty
 [submodule "bundle/NrrRgn"]
-	path = bundle/NrrRgn
-	url = git://github.com/chrisbra/NrrwRgn.git
+  path = bundle/NrrRgn
+  url = git://github.com/chrisbra/NrrwRgn.git
+  ignore = dirty
 [submodule "bundle/ZoomWin"]
-	path = bundle/ZoomWin
-	url = git://github.com/vim-scripts/ZoomWin.git
+  path = bundle/ZoomWin
+  url = git://github.com/vim-scripts/ZoomWin.git
+  ignore = dirty
 [submodule "bundle/vim-buffergator"]
-	path = bundle/vim-buffergator
-	url = git://github.com/jeetsukumaran/vim-buffergator.git
+  path = bundle/vim-buffergator
+  url = git://github.com/jeetsukumaran/vim-buffergator.git
+  ignore = dirty
 [submodule "bundle/vim-vroom"]
-	path = bundle/vim-vroom
-	url = git://github.com/skalnik/vim-vroom.git
+  path = bundle/vim-vroom
+  url = git://github.com/skalnik/vim-vroom.git
+  ignore = dirty
 [submodule "bundle/vim-slim"]
-	path = bundle/vim-slim
-	url = git://github.com/slim-template/vim-slim.git
+  path = bundle/vim-slim
+  url = git://github.com/slim-template/vim-slim.git
+  ignore = dirty
 [submodule "bundle/webapi-vim"]
-	path = bundle/webapi-vim
-	url = git://github.com/mattn/webapi-vim.git
+  path = bundle/webapi-vim
+  url = git://github.com/mattn/webapi-vim.git
+  ignore = dirty
 [submodule "bundle/vim-ruby-run"]
-	path = bundle/vim-ruby-run
-	url = https://github.com/stjernstrom/vim-ruby-run
+  path = bundle/vim-ruby-run
+  url = https://github.com/stjernstrom/vim-ruby-run
+  ignore = dirty
 [submodule "bundle/jasmine"]
-	path = bundle/jasmine
-	url = git://github.com/claco/jasmine.vim.git
+  path = bundle/jasmine
+  url = git://github.com/claco/jasmine.vim.git
+  ignore = dirty
 [submodule "bundle/jshint-vim"]
-	path = bundle/jshint-vim
-	url = git@github.com:walm/jshint.vim.git
+  path = bundle/jshint-vim
+  url = git@github.com:walm/jshint.vim.git
+  ignore = dirty
 [submodule "bundle/emmet-vim"]
-	path = bundle/emmet-vim
-	url = https://github.com/mattn/emmet-vim.git
+  path = bundle/emmet-vim
+  url = https://github.com/mattn/emmet-vim.git
+  ignore = dirty
+[submodule "bundle/promptline"]
+  path = bundle/promptline
+  url = https://github.com/edkolev/promptline.vim
+  ignore = dirty
+[submodule "bundle/vim-multiedit"]
+  path = bundle/vim-multiedit
+  url = https://github.com/hlissner/vim-multiedit
+  ignore = dirty
