--- a/.gitmodules
+++ b/.gitmodules
@@ -255,7 +255,7 @@
 	url = git://github.com/nono/vim-handlebars.git
 [submodule "bundle/vim-css-color"]
 	path = bundle/vim-css-color
-	url = github.com:ap/vim-css-color.git
+	url = git@github.com:ap/vim-css-color.git
 [submodule "bundle/vim-gitgutter"]
 	path = bundle/vim-gitgutter
 	url = git@github.com:airblade/vim-gitgutter.git
