--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "snippets"]
   path = snippets
-  url = git://github.com/asux/snipmate-snippets.git
+  url = git@github.com:asux/snipmate-snippets.git
   ignore = dirty
 [submodule "bundle/rails"]
   path = bundle/rails
@@ -280,6 +280,12 @@
 [submodule "bundle/vim-addon-mw-utils"]
 	path = bundle/vim-addon-mw-utils
 	url = https://github.com/MarcWeber/vim-addon-mw-utils.git
-[submodule "bundle/garbas-vim-snipmate"]
-	path = bundle/garbas-vim-snipmate
+[submodule "bundle/vim-snipmate"]
+	path = bundle/vim-snipmate
 	url = https://github.com/garbas/vim-snipmate.git
+[submodule "bundle/vim-snippets"]
+	path = bundle/vim-snippets
+	url = https://github.com/honza/vim-snippets.git
+[submodule "bundle/snipmate-snippets"]
+	path = bundle/snipmate-snippets
+	url = https://github.com/scrooloose/snipmate-snippets.git
