--- a/.gitmodules
+++ b/.gitmodules
@@ -134,10 +134,6 @@
   path = bundle/vim-jquery
   url = git://github.com/itspriddle/vim-jquery.git
   ignore = dirty
-[submodule "bundle/html5.vim"]
-  path = bundle/html5.vim
-  url = git://github.com/othree/html5.vim.git
-  ignore = dirty
 [submodule "bundle/gundo"]
   path = bundle/gundo
   url = http://github.com/sjl/gundo.vim.git
@@ -285,3 +281,6 @@
 [submodule "bundle/snipmate-snippets"]
 	path = bundle/snipmate-snippets
 	url = https://github.com/scrooloose/snipmate-snippets.git
+[submodule "bundle/vim-polyglot"]
+	path = bundle/vim-polyglot
+	url = git@github.com:sheerun/vim-polyglot.git
