--- a/.gitmodules
+++ b/.gitmodules
@@ -287,3 +287,6 @@
 [submodule "bundle/vim-es6"]
 	path = bundle/vim-es6
 	url = git@github.com:isRuslan/vim-es6.git
+[submodule "bundle/syntastic-local-eslint.vim"]
+	path = bundle/syntastic-local-eslint.vim
+	url = git@github.com:mtscout6/syntastic-local-eslint.vim.git
