--- a/.gitmodules
+++ b/.gitmodules
@@ -1,62 +1,62 @@
 [submodule "bundle/rails"]
   path = bundle/rails
-  url = git://github.com/tpope/vim-rails.git
+  url = https://github.com/tpope/vim-rails.git
   ignore = dirty
 [submodule "bundle/haml"]
   path = bundle/haml
-  url = git://github.com/tpope/vim-haml.git
+  url = https://github.com/tpope/vim-haml.git
   ignore = dirty
 [submodule "bundle/surround"]
   path = bundle/surround
-  url = git://github.com/tpope/vim-surround.git
+  url = https://github.com/tpope/vim-surround.git
   ignore = dirty
 [submodule "bundle/NERD_tree"]
   path = bundle/NERD_tree
-  url = git://github.com/scrooloose/nerdtree.git
+  url = https://github.com/scrooloose/nerdtree.git
   ignore = dirty
 [submodule "bundle/NERD_commenter"]
   path = bundle/NERD_commenter
-  url = git://github.com/scrooloose/nerdcommenter.git
+  url = https://github.com/scrooloose/nerdcommenter.git
   ignore = dirty
 [submodule "bundle/ragtag"]
   path = bundle/ragtag
-  url = git://github.com/tpope/vim-ragtag.git
+  url = https://github.com/tpope/vim-ragtag.git
   ignore = dirty
 [submodule "bundle/fugitive"]
   path = bundle/fugitive
-  url = git://github.com/tpope/vim-fugitive.git
+  url = https://github.com/tpope/vim-fugitive.git
   ignore = dirty
 [submodule "bundle/markdown"]
   path = bundle/markdown
-  url = git://github.com/tpope/vim-markdown.git
+  url = https://github.com/tpope/vim-markdown.git
   ignore = dirty
 [submodule "bundle/vividchalk"]
   path = bundle/vividchalk
-  url = git://github.com/tpope/vim-vividchalk.git
+  url = https://github.com/tpope/vim-vividchalk.git
   ignore = dirty
 [submodule "bundle/git"]
   path = bundle/git
-  url = git://github.com/tpope/vim-git.git
+  url = https://github.com/tpope/vim-git.git
   ignore = dirty
 [submodule "bundle/endwise"]
   path = bundle/endwise
-  url = git://github.com/tpope/vim-endwise.git
+  url = https://github.com/tpope/vim-endwise.git
   ignore = dirty
 [submodule "bundle/syntastic"]
   path = bundle/syntastic
-  url = git://github.com/scrooloose/syntastic.git
+  url = https://github.com/scrooloose/syntastic.git
   ignore = dirty
 [submodule "bundle/textile"]
   path = bundle/textile
-  url = git://github.com/timcharper/textile.vim.git
+  url = https://github.com/timcharper/textile.vim.git
   ignore = dirty
 [submodule "bundle/vim-ruby"]
   path = bundle/vim-ruby
-  url = git://github.com/vim-ruby/vim-ruby.git
+  url = https://github.com/vim-ruby/vim-ruby.git
   ignore = dirty
 [submodule "bundle/unimpaired"]
   path = bundle/unimpaired
-  url = git://github.com/tpope/vim-unimpaired.git
+  url = https://github.com/tpope/vim-unimpaired.git
   ignore = dirty
 [submodule "bundle/scss-syntax"]
   path = bundle/scss-syntax
@@ -64,71 +64,71 @@
   ignore = dirty
 [submodule "bundle/ack"]
   path = bundle/ack
-  url = git://github.com/mileszs/ack.vim.git
+  url = https://github.com/mileszs/ack.vim.git
   ignore = dirty
 [submodule "bundle/vim-coffee-script"]
   path = bundle/vim-coffee-script
-  url = git://github.com/kchmck/vim-coffee-script.git
+  url = https://github.com/kchmck/vim-coffee-script.git
   ignore = dirty
 [submodule "bundle/supertab"]
   path = bundle/supertab
-  url = git://github.com/ervandew/supertab.git
+  url = https://github.com/ervandew/supertab.git
   ignore = dirty
 [submodule "bundle/vim-ruby-sinatra"]
   path = bundle/vim-ruby-sinatra
-  url = git://github.com/hallison/vim-ruby-sinatra.git
+  url = https://github.com/hallison/vim-ruby-sinatra.git
   ignore = dirty
 [submodule "bundle/securemodelines"]
   path = bundle/securemodelines
-  url = git://github.com/ciaranm/securemodelines.git
+  url = https://github.com/ciaranm/securemodelines.git
   ignore = dirty
 [submodule "bundle/vim-textobj-user"]
   path = bundle/vim-textobj-user
-  url = git://github.com/kana/vim-textobj-user.git
+  url = https://github.com/kana/vim-textobj-user.git
   ignore = dirty
 [submodule "bundle/vim-textobj-rubybloc"]
   path = bundle/vim-textobj-rubybloc
-  url = git://github.com/nelstrom/vim-textobj-rubyblock.git
+  url = https://github.com/nelstrom/vim-textobj-rubyblock.git
   ignore = dirty
 [submodule "bundle/vim-preview"]
   path = bundle/vim-preview
-  url = git://github.com/greyblake/vim-preview.git
+  url = https://github.com/greyblake/vim-preview.git
   ignore = dirty
 [submodule "bundle/abolish"]
   path = bundle/abolish
-  url = git://github.com/tpope/vim-abolish.git
+  url = https://github.com/tpope/vim-abolish.git
   ignore = dirty
 [submodule "bundle/liftweb"]
   path = bundle/liftweb
-  url = git://github.com/Shadowfiend/liftweb-vim.git
+  url = https://github.com/Shadowfiend/liftweb-vim.git
   ignore = dirty
 [submodule "bundle/scala"]
   path = bundle/scala
-  url = git://github.com/akhil/scala-vim-bundle.git
+  url = https://github.com/akhil/scala-vim-bundle.git
   ignore = dirty
 [submodule "bundle/grails-vim"]
   path = bundle/grails-vim
-  url = git://github.com/felipero/grails-vim.git
+  url = https://github.com/felipero/grails-vim.git
   ignore = dirty
 [submodule "bundle/clojure"]
   path = bundle/clojure
-  url = git://github.com/vim-scripts/VimClojure.git
+  url = https://github.com/vim-scripts/VimClojure.git
   ignore = dirty
 [submodule "bundle/zencoding-vim"]
   path = bundle/zencoding-vim
-  url = git://github.com/mattn/zencoding-vim.git
+  url = https://github.com/mattn/zencoding-vim.git
   ignore = dirty
 [submodule "bundle/vim-colors-solarized"]
   path = bundle/vim-colors-solarized
-  url = git://github.com/altercation/vim-colors-solarized.git
+  url = https://github.com/altercation/vim-colors-solarized.git
   ignore = dirty
 [submodule "bundle/jade"]
   path = bundle/jade
-  url = git://github.com/digitaltoad/vim-jade.git
+  url = https://github.com/digitaltoad/vim-jade.git
   ignore = dirty
 [submodule "bundle/vim-jquery"]
   path = bundle/vim-jquery
-  url = git://github.com/itspriddle/vim-jquery.git
+  url = https://github.com/itspriddle/vim-jquery.git
   ignore = dirty
 [submodule "bundle/gundo"]
   path = bundle/gundo
@@ -140,67 +140,67 @@
   ignore = dirty
 [submodule "bundle/vim-yankring"]
   path = bundle/vim-yankring
-  url = git://github.com/chrismetcalf/vim-yankring.git
+  url = https://github.com/chrismetcalf/vim-yankring.git
   ignore = dirty
 [submodule "bundle/actionscript"]
   path = bundle/actionscript
-  url = git://github.com/endel/actionscript.vim.git
+  url = https://github.com/endel/actionscript.vim.git
   ignore = dirty
 [submodule "bundle/vim-autoclose"]
   path = bundle/vim-autoclose
-  url = git://github.com/Townk/vim-autoclose.git
+  url = https://github.com/Townk/vim-autoclose.git
   ignore = dirty
 [submodule "bundle/vim-golang"]
   path = bundle/vim-golang
-  url = git://github.com/jnwhiteh/vim-golang.git
+  url = https://github.com/jnwhiteh/vim-golang.git
   ignore = dirty
 [submodule "bundle/gist-vim"]
   path = bundle/gist-vim
-  url = git://github.com/mattn/gist-vim.git
+  url = https://github.com/mattn/gist-vim.git
   ignore = dirty
 [submodule "bundle/git-vim"]
   path = bundle/git-vim
-  url = git://github.com/motemen/git-vim.git
+  url = https://github.com/motemen/git-vim.git
   ignore = dirty
 [submodule "bundle/grep-vim"]
   path = bundle/grep-vim
-  url = git://github.com/vim-scripts/grep.vim.git
+  url = https://github.com/vim-scripts/grep.vim.git
   ignore = dirty
 [submodule "bundle/vim-indexed-search"]
   path = bundle/vim-indexed-search
-  url = git://github.com/henrik/vim-indexed-search.git
+  url = https://github.com/henrik/vim-indexed-search.git
   ignore = dirty
 [submodule "bundle/ctrp"]
   path = bundle/ctrp
-  url = git://github.com/kien/ctrlp.vim.git
+  url = https://github.com/kien/ctrlp.vim.git
   ignore = dirty
 [submodule "bundle/vim-easymotion"]
   path = bundle/vim-easymotion
-  url = git://github.com/Lokaltog/vim-easymotion.git
+  url = https://github.com/Lokaltog/vim-easymotion.git
   ignore = dirty
 [submodule "bundle/NrrRgn"]
   path = bundle/NrrRgn
-  url = git://github.com/chrisbra/NrrwRgn.git
+  url = https://github.com/chrisbra/NrrwRgn.git
   ignore = dirty
 [submodule "bundle/ZoomWin"]
   path = bundle/ZoomWin
-  url = git://github.com/vim-scripts/ZoomWin.git
+  url = https://github.com/vim-scripts/ZoomWin.git
   ignore = dirty
 [submodule "bundle/vim-buffergator"]
   path = bundle/vim-buffergator
-  url = git://github.com/jeetsukumaran/vim-buffergator.git
+  url = https://github.com/jeetsukumaran/vim-buffergator.git
   ignore = dirty
 [submodule "bundle/vim-vroom"]
   path = bundle/vim-vroom
-  url = git://github.com/skalnik/vim-vroom.git
+  url = https://github.com/skalnik/vim-vroom.git
   ignore = dirty
 [submodule "bundle/vim-slim"]
   path = bundle/vim-slim
-  url = git://github.com/slim-template/vim-slim.git
+  url = https://github.com/slim-template/vim-slim.git
   ignore = dirty
 [submodule "bundle/webapi-vim"]
   path = bundle/webapi-vim
-  url = git://github.com/mattn/webapi-vim.git
+  url = https://github.com/mattn/webapi-vim.git
   ignore = dirty
 [submodule "bundle/vim-ruby-run"]
   path = bundle/vim-ruby-run
@@ -208,7 +208,7 @@
   ignore = dirty
 [submodule "bundle/jasmine"]
   path = bundle/jasmine
-  url = git://github.com/claco/jasmine.vim.git
+  url = https://github.com/claco/jasmine.vim.git
   ignore = dirty
 [submodule "bundle/jshint-vim"]
   path = bundle/jshint-vim
@@ -228,7 +228,7 @@
   ignore = dirty
 [submodule "bundle/handlebars"]
 	path = bundle/handlebars
-	url = git://github.com/nono/vim-handlebars.git
+	url = https://github.com/nono/vim-handlebars.git
 [submodule "bundle/vim-css-color"]
 	path = bundle/vim-css-color
 	url = git@github.com:ap/vim-css-color.git
@@ -243,7 +243,7 @@
 	url = git@github.com:Shougo/unite.vim.git
 [submodule "bundle/vim-stylus"]
 	path = bundle/vim-stylus
-	url = git://github.com/wavded/vim-stylus.git
+	url = https://github.com/wavded/vim-stylus.git
 [submodule "bundle/vim-jst"]
 	path = bundle/vim-jst
 	url = git@github.com:briancollins/vim-jst.git
